--- a/addiction.html
+++ b/addiction.html
@@ -72,8 +72,8 @@
                 <div class="borderTest"></div>
                 <div class="rowTest">
                     <div class="colTest">
-                        <div class="testimonial">
-                            <div class="name">Full Name</div>
+                        <!--<div class="testimonial">
+                            <div class="name">Will M.</div>
                             <div class="stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -81,26 +81,28 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has been the industry's standard dummy text ever since the 1500s</p>
-                        </div>
+                            <p>I am coming up on my second year completely drug free. This is the longest time ever in
+                                my life. I honestly don't think I could have done it with out the help of Dr. Young and
+                                her dream team . I will forever be thankful for Compassionate Care, Inc.</p>
+                        </div>-->
                     </div>
                     <div class="colTest">
                         <div class="testimonial">
-                            <div class="name">Full Name</div>
+                            <div class="name">Will M.</div>
                             <div class="stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
+                                <i class="fas fa-star"></i>
                             </div>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has been the industry's standard dummy text ever since the 1500s</p>
+                            <p>I am coming up on my second year completely drug free. This is the longest time ever in
+                                my life. I honestly don't think I could have done it with out the help of Dr. Young and
+                                her dream team . I will forever be thankful for Compassionate Care, Inc.</p>
                         </div>
                     </div>
                     <div class="colTest">
-                        <div class="testimonial">
+                        <!--<div class="testimonial">
                             <div class="name">Full Name</div>
                             <div class="stars">
                                 <i class="fas fa-star"></i>
@@ -111,7 +113,7 @@
                             </div>
                             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
                                 has been the industry's standard dummy text ever since the 1500s</p>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
