content was given lulz

--- a/addiction.html
+++ b/addiction.html
@@ -71,22 +71,7 @@
                 <h1>Testimonials</h1>
                 <div class="borderTest"></div>
                 <div class="rowTest">
-                    <div class="colTest">
-                        <!--<div class="testimonial">
-                            <div class="name">Will M.</div>
-                            <div class="stars">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <p>I am coming up on my second year completely drug free. This is the longest time ever in
-                                my life. I honestly don't think I could have done it with out the help of Dr. Young and
-                                her dream team . I will forever be thankful for Compassionate Care, Inc.</p>
-                        </div>-->
-                    </div>
-                    <div class="colTest">
+                    <!--<div class="colTest">
                         <div class="testimonial">
                             <div class="name">Will M.</div>
                             <div class="stars">
@@ -100,10 +85,10 @@
                                 my life. I honestly don't think I could have done it with out the help of Dr. Young and
                                 her dream team . I will forever be thankful for Compassionate Care, Inc.</p>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="colTest">
-                        <!--<div class="testimonial">
-                            <div class="name">Full Name</div>
+                        <div class="testimonial">
+                            <div class="name">Will M.</div>
                             <div class="stars">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -111,9 +96,25 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has been the industry's standard dummy text ever since the 1500s</p>
-                        </div>-->
+                            <p>I am coming up on my second year completely drug free. This is the longest time ever in
+                                my life. I honestly don't think I could have done it without the help of Dr. Young and
+                                her dream team . I will forever be thankful for Compassionate Care, Inc.</p>
+                        </div>
+                    </div>
+                    <div class="colTest">
+                        <div class="testimonial">
+                            <div class="name">Anonymous</div>
+                            <div class="stars">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <p>I was unable to stay sober for more then a month at a time. Then I came to see Dr. Young.
+                                I am now on Sublocade and entering into one year sober . Dr Young's ability to listen is
+                                what helped the most.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -145,6 +146,10 @@
                     <li class="icon solid fa-envelope">
                         <a
                             href="https://mail.google.com/mail/?view=cm&fs=1&to=LindaYoungDNP@protonmail.com&su=Subject&body=Body">LindaYoungDNP@protonmail.com</a>
+                    </li>
+                    <li class="icon solid fa-envelope">
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=eraremit@aol.com&su=Subject&body=Body">Send
+                            Billing inquiries Here</a>
                     </li>
                     <li class="icon brands fa-instagram">
                         <a href="https://www.instagram.com/dryoungdnp/">@dryoungdnp</a>
