--- a/botox.html
+++ b/botox.html
@@ -90,6 +90,10 @@
                         <a
                             href="https://mail.google.com/mail/?view=cm&fs=1&to=LindaYoungDNP@protonmail.com&su=Subject&body=Body">LindaYoungDNP@protonmail.com</a>
                     </li>
+                    <li class="icon solid fa-envelope">
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=eraremit@aol.com&su=Subject&body=Body">Send
+                            Billing inquiries Here</a>
+                    </li>
                     <li class="icon brands fa-instagram">
                         <a href="https://www.instagram.com/dryoungdnp/">@dryoungdnp</a>
                     </li>
