--- a/team.html
+++ b/team.html
@@ -85,6 +85,15 @@
                     </p>
                 </div>
             </section>
+            <section class="spotlight">
+                <div class="image"><img class="shorter" id="onRight" src="images/laVerne.jpg" alt="" /></div>
+                <div class="content">
+                    <h3 class="major">LaVerne Practice Managert</h3>
+                    <p>
+                        LaVerne has over 20 years of Management experience.
+                    </p>
+                </div>
+            </section>
         </section>
     </article>
 
@@ -113,6 +122,10 @@
                     <li class="icon solid fa-envelope">
                         <a
                             href="https://mail.google.com/mail/?view=cm&fs=1&to=LindaYoungDNP@protonmail.com&su=Subject&body=Body">LindaYoungDNP@protonmail.com</a>
+                    </li>
+                    <li class="icon solid fa-envelope">
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=eraremit@aol.com&su=Subject&body=Body">Send
+                            Billing inquiries Here</a>
                     </li>
                     <li class="icon brands fa-instagram">
                         <a href="https://www.instagram.com/dryoungdnp/">@dryoungdnp</a>
