--- a/vi.html
+++ b/vi.html
@@ -62,6 +62,32 @@
 
             </div>
         </section>
+        <div class="testimonials">
+            <div class="innerTest">
+                <h1>Before, During, and After Vi Peel</h1>
+                <div class="borderTest"></div>
+                <div class="rowTest">
+                    <div class="colTest">
+                        <div class="testimonial">
+                            <div class="name">Before</div>
+                            <img class="viPics" src="images/beforePeel.jpg" alt="" />
+                        </div>
+                    </div>
+                    <div class="colTest">
+                        <div class="testimonial">
+                            <div class="name">During</div>
+                            <img class="viPics" src="images/duringPeel.jpg" alt="" />
+                        </div>
+                    </div>
+                    <div class="colTest">
+                        <div class="testimonial">
+                            <div class="name">After</div>
+                            <img class="viPics" src="images/afterPeel.jpg" alt="" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </article>
 
     <!-- Footer -->
@@ -89,6 +115,10 @@
                     <li class="icon solid fa-envelope">
                         <a
                             href="https://mail.google.com/mail/?view=cm&fs=1&to=LindaYoungDNP@protonmail.com&su=Subject&body=Body">LindaYoungDNP@protonmail.com</a>
+                    </li>
+                    <li class="icon solid fa-envelope">
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=eraremit@aol.com&su=Subject&body=Body">Send
+                            Billing inquiries Here</a>
                     </li>
                     <li class="icon brands fa-instagram">
                         <a href="https://www.instagram.com/dryoungdnp/">@dryoungdnp</a>
