--- a/team.html
+++ b/team.html
@@ -65,11 +65,10 @@
             <section class="spotlight">
                 <div class="image"><img class="shorter" id="onRight" src="images/yeilin.jpg" alt="" /></div>
                 <div class="content">
-                    <h3 class="major">Yeilin Medical Assistant</h3>
+                    <h3 class="major">LaVerne Practice Manager</h3>
                     <p>
-                        Yeilin is a Certified Medical Assistant. She has been in the medical field over 4 years. She is
-                        experienced in acute and continuous care facilities. She is fluent in Spanish and English.
-                        Yeilin strives to provide the highest quality patient care.
+                        LaVerne has over 20 years of Management experience specializing in conflict resolution, along
+                        with proven success in building long term business relationships.
                     </p>
                 </div>
             </section>
@@ -88,9 +87,11 @@
             <section class="spotlight">
                 <div class="image"><img class="shorter" id="onRight" src="images/laVerne.jpg" alt="" /></div>
                 <div class="content">
-                    <h3 class="major">LaVerne Practice Managert</h3>
+                    <h3 class="major">Yeilin Medical Assistant</h3>
                     <p>
-                        LaVerne has over 20 years of Management experience.
+                        Yeilin is a Certified Medical Assistant. She has been in the medical field over 4 years. She is
+                        experienced in acute and continuous care facilities. She is fluent in Spanish and English.
+                        Yeilin strives to provide the highest quality patient care.
                     </p>
                 </div>
             </section>
