--- a/team.html
+++ b/team.html
@@ -63,9 +63,9 @@
                 </div>
             </section>
             <section class="spotlight">
-                <div class="image"><img class="shorter" id="onRight" src="images/yeilin.jpg" alt="" /></div>
+                <div class="image"><img class="shorter" id="onRight" src="images/laVerne.jpg" alt="" /></div>
                 <div class="content">
-                    <h3 class="major">LaVerne Practice Manager</h3>
+                    <h3 class="major">LaVerne </br> Practice Manager</h3>
                     <p>
                         LaVerne has over 20 years of Management experience specializing in conflict resolution, along
                         with proven success in building long term business relationships.
@@ -75,7 +75,7 @@
             <section class="spotlight">
                 <div class="image"><img class="shorter" src="images/verina.jpg" alt="" /></div>
                 <div class="content">
-                    <h3 class="major">Verina Medical Assistant</h3>
+                    <h3 class="major">Verina </br> Medical Assistant</h3>
                     <p>
                         Verina is a certified medical assistant for over 5 years. She has worked with pediatrics,
                         orthopedic, also at Miriam hospital immunology and internal medicine, and urgent care. Verina
@@ -85,9 +85,9 @@
                 </div>
             </section>
             <section class="spotlight">
-                <div class="image"><img class="shorter" id="onRight" src="images/laVerne.jpg" alt="" /></div>
+                <div class="image"><img class="shorter" id="onRight" src="images/yeilin.jpg" alt="" /></div>
                 <div class="content">
-                    <h3 class="major">Yeilin Medical Assistant</h3>
+                    <h3 class="major">Yeilin </br> Medical Assistant</h3>
                     <p>
                         Yeilin is a Certified Medical Assistant. She has been in the medical field over 4 years. She is
                         experienced in acute and continuous care facilities. She is fluent in Spanish and English.
