--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@
         </ul>
     </nav>
 
+    <section id="bannerAbove">
+        <h2>Compassion, Kindness, and Respect</h2>
+    </section>
+
     <!-- Banner -->
     <section id="banner">
         <div class="inner">
-            <h2 class="major special">Primary Care Practice</br>Compassion, Kindness, and Respect</h2>
+            <h2 class="major special">Primary Care Practice</h2>
             <p>
                 Now Accepting New Patients | Over 19 Years of Experience |
                 Licensed and Certified
