some media query shtuff

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </p>
             <ul class="actions special stacked">
                 <li>
-                    <a href="#one" class="button primary large scrolly">New Patient Resources</a>
+                    <a href="#one" class="button primary large scrolly" id="newResource">New Patient Resources</a>
                 </li>
                 <!--<li>
                     <a href="https://www.facebook.com/DrYoungDNP" class="button large scrolly">Office Updates</a>
