--- a/index.html
+++ b/index.html
@@ -58,6 +58,26 @@
         </div>
     </section>
 
+    <!-- Holiday Hours Banner -->
+    <section id="three" class="wrapper style1 special">
+        <div class="inner">
+            <h3 class="major special">Holiday Hours</h3>
+            <div>
+                <p>
+                    <b>Thursday, December 23rd</b> closing 12pm and reopening <b>Monday, December 27.</b></br>
+
+                    <b>Wednesday, December 29th</b> closing 12pm and reopening Monday, <b>January 3rd</b></br>
+
+                    Closed all day <b>January 17th.</b></br>
+
+                    Closed all day <b>January 27th.</b></br>
+
+                    Closed all day <b>February 21st</b>
+                </p>
+            </div>
+        </div>
+    </section>
+
     <!-- One -->
     <section id="one" class="wrapper alt style2">
         <ul class="features">
