--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <p>
                     <b>Thursday, December 23rd</b> closing 12pm and reopening <b>Monday, December 27.</b></br>
 
-                    <b>Wednesday, December 29th</b> closing 12pm and reopening Monday, <b>January 3rd</b></br>
+                    <b>Wednesday, December 29th</b> closing 12pm and reopening <b>Monday, January 3rd</b></br>
 
                     Closed all day <b>January 17th.</b></br>
 
