new holiday hours

--- a/index.html
+++ b/index.html
@@ -66,15 +66,19 @@
             <h3 class="major special">Holiday Hours</h3>
             <div>
                 <p>
-                    <b>Thursday, December 23rd</b> closing 12pm and reopening <b>Monday, December 27.</b></br>
+                    Closed all day <b>January 17th, 2022</b></br>
 
-                    <b>Wednesday, December 29th</b> closing 12pm and reopening <b>Monday, January 3rd</b></br>
+                    Closed all day <b>January 27th, 2022</b></br>
 
-                    Closed all day <b>January 17th.</b></br>
+                    Closed all day <b>February 21st, 2022</b></br>
 
-                    Closed all day <b>January 27th.</b></br>
+                    Closed all week <b>May 30th, 2022</b></br>
 
-                    Closed all day <b>February 21st</b>
+                    Closed all day <b>December 23rd, 2022</b></br>
+
+                    Closed all week <b>December 26th, 2022</b></br>
+
+                    Closed all day <b>January 2nd, 2023</b>
                 </p>
             </div>
         </div>
