--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
 
 <head>
     <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+
+    <!-- SEO -->
+    <meta name="description"
+        content="Dr. Linda Young, DNP provides primary care, botox and Juvederm, hair restoration, addicition recovery, CBD, and more" />
+    <meta name="author" content="Dr. Linda Young, DNP | Primary Care North Smithfield RI" />
+    <meta name="keywords"
+        content="Primary Care, Botox, Juvederm, Addiction Recovery, Hair Restoration, Aesthetics, CBD" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:title" content="Dr. Linda Young, DNP | Primary Care North Smithfield RI" />
+    <meta property="og:description"
+        content="Dr. Linda Young, DNP provides primary care, botox and Juvederm, hair restoration, addicition recovery, CBD, and more" />
+    <meta property="og:url" content="https://drlindayoungdnp.com/" />
+    <meta property="og:site_name" content="Dr. Linda Young, DNP | Primary Care North Smithfield RI" />
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
