lots of SEO work

--- a/CBD.html
+++ b/CBD.html
@@ -2,7 +2,14 @@
 <html>
 
 <head>
-    <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+    <title>Dr. Linda Young, DNP | CBD</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Reduce Anxiety" />
+    <meta name="keywords" content="CBD, Hemp, Extract" />
+    <meta property="og:title" content="Dr. Linda Young, DNP | CBD" />
+    <meta property="og:description" content="Reduce Anxiety" />
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -48,7 +55,7 @@
         <section class="wrapper">
             <div class="inner">
                 <h3>CBD Isolate vs. Full Spectrum Hemp Extract</h3>
-                <span class="image left"><img src="images/cbd.png" alt="" /></span>
+                <span class="image left"><img src="images/cbd.png" alt="Green Compass CBD Products" /></span>
                 <p>
                     There are two main sources for CBD found in nature. The hemp plant and the marijuana plant. Green
                     Compass products are derived from hemp only. Our hemp has been engineered to be high in CBD, while
@@ -142,7 +149,7 @@
                 <a href="https://compassionatecare.greencompassglobal.com/"
                     class="button primary large aestheticButtons cbButton">Buy
                     Now</a>
-                <img class="QR" src="images/qrcode.png" alt="" />
+                <img class="QR" src="images/qrcode.png" alt="QR Code" />
             </div>
         </section>
     </article>
