--- a/addiction.html
+++ b/addiction.html
@@ -2,7 +2,14 @@
 <html>
 
 <head>
-    <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+    <title>Dr. Linda Young, DNP | Addiction Recovery</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Compassionate care to help those in need get the recovery they deserve" />
+    <meta name="keywords" content="Addiction, Recovery" />
+    <meta property="og:title" content="Dr. Linda Young, DNP | Addiction Recovery" />
+    <meta property="og:description" content="Compassionate care to help those in need get the recovery they deserve" />
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -50,7 +57,7 @@
         <section class="wrapper">
             <div class="inner">
                 <h3 style="text-align: center;">Treat Your Drug Addiction</h3>
-                <span class="image left"><img src="images/recovery.png" alt="" /></span>
+                <span class="image left"><img src="images/recovery.png" alt="Addiction Recovery" /></span>
                 <p>
                     Don't let your addiction take over your life. Overcome your drug addiction issues with compassionate
                     treatment from Dr. Linda Young, DNP. Call our office to schedule an appointment for your drug
