--- a/adult.html
+++ b/adult.html
@@ -2,7 +2,14 @@
 <html>
 
 <head>
-    <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+    <title>Dr. Linda Young, DNP | Adult Primary Care</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Adult primary care to keep you and your family healthy" />
+    <meta name="keywords" content="Primary care, Physician, Doctor" />
+    <meta property="og:title" content="Dr. Linda Young, DNP | Adult Primary Care" />
+    <meta property="og:description" content="CAdult primary care to keep you and your family healthy" />
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -47,7 +54,7 @@
         <section class="wrapper">
             <div class="inner">
                 <h3 style="text-align: center;">Comprehensive Primary Care for Adults</h3>
-                <span class="image left"><img src="images/newPatient.png" alt="" />
+                <span class="image left"><img src="images/newPatient.png" alt="Primary care" />
                     <ul class="actions special stacked" style="padding-top: 25px; text-align: center;">
                         <li>
                             <a href="./assets/NEW PATIENT PACKAGE.pdf"
