--- a/aesthetic.html
+++ b/aesthetic.html
@@ -2,7 +2,14 @@
 <html>
 
 <head>
-    <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+    <title>Dr. Linda Young, DNP | Aesthetics</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Cosmetic cures, Revitalize your appearance" />
+    <meta name="keywords" content="Botox, Juvederm, VI Peel, Hair Restoration" />
+    <meta property="og:title" content="Dr. Linda Young, DNP | Aesthetics" />
+    <meta property="og:description" content="Cosmetic cures, Revitalize your appearance" />
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -49,7 +56,7 @@
         <!-- Services -->
         <section id="two" class="wrapper alt">
             <section class="spotlight">
-                <div class="image"><img src="images/botoxHeader.jpg" alt="" /></div>
+                <div class="image"><img src="images/botoxHeader.jpg" alt="Injection" /></div>
                 <div class="content">
                     <h3 class="major">Botox and Juvederm</h3>
                     <p>
@@ -60,7 +67,7 @@
                 </div>
             </section>
             <section class="spotlight">
-                <div class="image"><img src="images/hairHeader.jpg" alt="" /></div>
+                <div class="image"><img src="images/hairHeader.jpg" alt="Hair Treatment" /></div>
                 <div class="content">
                     <h3 class="major">Hair Restoration Treatment</h3>
                     <p>
@@ -72,7 +79,7 @@
                 </div>
             </section>
             <section class="spotlight">
-                <div class="image"><img src="images/vi.jpg" alt="" /></div>
+                <div class="image"><img src="images/vi.jpg" alt="Skin Treatment" /></div>
                 <div class="content">
                     <h3 class="major">VI Peel Treatment</h3>
                     <p>
