--- a/botox.html
+++ b/botox.html
@@ -2,7 +2,14 @@
 <html>
 
 <head>
-    <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+    <title>Dr. Linda Young, DNP | Botox</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Botox and Juvederm Injections" />
+    <meta name="keywords" content="Botox, Juvederm, Cosmetic, Revitalize" />
+    <meta property="og:title" content="Dr. Linda Young, DNP | Botox" />
+    <meta property="og:description" content="Botox and Juvederm Injections" />
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -48,7 +55,7 @@
         <section class="wrapper">
             <div class="inner">
                 <h3 style="text-align: center;">Botox and Juvederm</h3>
-                <span class="image left"><img src="images/botox.png" alt="" /></span>
+                <span class="image left"><img src="images/botox.png" alt="Botox Injections" /></span>
                 <p>
                     If you're looking for Botox or Juvederm, rely on Dr. Linda Young, DNP for your cosmetic cure.
                     Revitalize your appearance safely and effectively with our Juvederm and Botox injections.
@@ -59,7 +66,7 @@
                     desire! You can expect individualized attention from us so that every patient gets the treatment
                     that is right for them. Reach out to us today!
                 </p>
-                <img class="botoxBA" src="images/botoxBeforeAfter.png" alt="" />
+                <img class="botoxBA" src="images/botoxBeforeAfter.png" alt="Botox befor and after" />
             </div>
         </section>
     </article>
