--- a/hairRestoration.html
+++ b/hairRestoration.html
@@ -2,7 +2,14 @@
 <html>
 
 <head>
-    <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+    <title>Dr. Linda Young, DNP | Hair Restoration</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Quality Hair Restoration Treatment" />
+    <meta name="keywords" content="Hair, Restoration, Nonsurgical, Quality" />
+    <meta property="og:title" content="Dr. Linda Young, DNP | Hair Restoration" />
+    <meta property="og:description" content="Quality Hair Restoration Treatment" />
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -48,7 +55,7 @@
         <section class="wrapper">
             <div class="inner">
                 <h3 style="text-align: center;">Platelet Rich Plasma Hair Treatment</h3>
-                <span class="image left"><img src="images/hairTreatment.png" alt="" /></span>
+                <span class="image left"><img src="images/hairTreatment.png" alt="Hair Restoration Treatment" /></span>
                 <p>
                     Treat hair loss with Dr. Linda Young's nonsurgical hair restoration treatment. Give your hair growth
                     a boost with the help of our advanced procedures. Turn to us for quality hair restoration treatments
