--- a/team.html
+++ b/team.html
@@ -2,7 +2,15 @@
 <html>
 
 <head>
-    <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+    <title>Dr. Linda Young, DNP | Our Team</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Dr. Linda Young, DNP and her team of highly qualified healthcare workers" />
+    <meta name="keywords" content="Doctor, Medical Assistant" />
+    <meta property="og:title" content="Dr. Linda Young, DNP | Our Team" />
+    <meta property="og:description"
+        content="Dr. Linda Young, DNP and her team of highly qualified healthcare workers" />
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -49,7 +57,7 @@
         <!-- Bios -->
         <section id="two" class="wrapper alt">
             <section class="spotlight">
-                <div class="image"><img class="shorter" src="images/Linda.jpg" alt="" /></div>
+                <div class="image"><img class="shorter" src="images/Linda.jpg" alt="Dr. Linda Young, DNP" /></div>
                 <div class="content">
                     <h3 class="major">Dr. Linda Young, DNP</h3>
                     <p>
@@ -63,7 +71,8 @@
                 </div>
             </section>
             <section class="spotlight">
-                <div class="image"><img class="shorter" id="onRight" src="images/laVerne.jpg" alt="" /></div>
+                <div class="image"><img class="shorter" id="onRight" src="images/laVerne.jpg" alt="Practice Manager" />
+                </div>
                 <div class="content">
                     <h3 class="major">LaVerne </br> Practice Manager</h3>
                     <p>
@@ -73,7 +82,7 @@
                 </div>
             </section>
             <section class="spotlight">
-                <div class="image"><img class="shorter" src="images/verina.jpg" alt="" /></div>
+                <div class="image"><img class="shorter" src="images/verina.jpg" alt="MEdical Assistant" /></div>
                 <div class="content">
                     <h3 class="major">Verina </br> Medical Assistant</h3>
                     <p>
@@ -85,7 +94,8 @@
                 </div>
             </section>
             <section class="spotlight">
-                <div class="image"><img class="shorter" id="onRight" src="images/yeilin.jpg" alt="" /></div>
+                <div class="image"><img class="shorter" id="onRight" src="images/yeilin.jpg" alt="Medical Assistant" />
+                </div>
                 <div class="content">
                     <h3 class="major">Yeilin </br> Medical Assistant</h3>
                     <p>
