--- a/vi.html
+++ b/vi.html
@@ -2,7 +2,14 @@
 <html>
 
 <head>
-    <title>Dr. Linda Young, DNP | Primary Care North Smithfield RI</title>
+    <title>Dr. Linda Young, DNP | VI Peel</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Improve your skin with a VI Peel" />
+    <meta name="keywords" content="Tone, Texture, Ance Scars, Soften, Wrinkles" />
+    <meta property="og:title" content="Dr. Linda Young, DNP | VI Peel" />
+    <meta property="og:description" content="Improve your skin with a VI Peel" />
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -47,7 +54,7 @@
         <section class="wrapper">
             <div class="inner">
                 <h3 style="text-align: center;">VI Peel Treatment</h3>
-                <span class="image left"><img src="images/chemical.png" alt="" /></span>
+                <span class="image left"><img src="images/chemical.png" alt="Chemical Peel Treatment" /></span>
                 <p>
                     A VI peel from Dr. Linda Young, DNP improves the tone, texture, and clarity of the skin. Reduce and
                     eliminate your age spots, acne scars and, treat hyperpigmentation with our skin treatments. This
@@ -70,19 +77,19 @@
                     <div class="colTest">
                         <div class="testimonial">
                             <div class="name">Before</div>
-                            <img class="viPics" src="images/beforePeel.jpg" alt="" />
+                            <img class="viPics" src="images/beforePeel.jpg" alt="Vi Peel Before" />
                         </div>
                     </div>
                     <div class="colTest">
                         <div class="testimonial">
                             <div class="name">During</div>
-                            <img class="viPics" src="images/duringPeel.jpg" alt="" />
+                            <img class="viPics" src="images/duringPeel.jpg" alt="Vi Peel During Treatment" />
                         </div>
                     </div>
                     <div class="colTest">
                         <div class="testimonial">
                             <div class="name">After</div>
-                            <img class="viPics" src="images/afterPeel.jpg" alt="" />
+                            <img class="viPics" src="images/afterPeel.jpg" alt="Vi Peel After" />
                         </div>
                     </div>
                 </div>
