--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="shortcut icon" type="image/png" href="images/tabIcon.png" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4ZVVWJRPPR"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-4ZVVWJRPPR');
+    </script>
 </head>
 
 <body class="is-preload">
