--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 
     <section id="bannerAbove">
         <h2>Compassion, Kindness, and Respect</h2>
+        <h5 style="color: white;">Please note - we are not enrolled as a Vaccine Provider or Covid Testing Site. Please
+            see the State of Rhode
+            Island's website for testing and vaccine locations. The website is: <a
+                href="https://covid.ri.gov/">Covid.RI.Gov</a></h5>
     </section>
 
     <!-- Banner -->
