--- a/addiction.html
+++ b/addiction.html
@@ -72,6 +72,12 @@
                     <b>-</b> Sublocade treatment
                 </p>
             </div>
+            <div class="inner">
+                <iframe class="youtube" src="https://www.youtube.com/embed/FHkpqF1Mdfk" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
         </section>
         <div class="testimonials">
             <div class="innerTest">
