--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
     <!-- Holiday Hours Banner -->
     <section id="three" class="wrapper style1 special">
         <div class="inner">
+            <div class="column">
+                <h3 id="careText">In Association with</h3>
+            </div>
+            <div class="column"><img id="care" src="images/care.png" alt="CharterCARE logo"></div>
             <h3 class="major special">Holiday Hours</h3>
             <button class="collapsible"><i id="expandIcon" class="fas fa-angle-down fa-lg"></i></button>
             <div class="expandableContent" style="padding-top: 1em;">
