--- a/team.html
+++ b/team.html
@@ -57,7 +57,8 @@
         <!-- Bios -->
         <section id="two" class="wrapper alt">
             <section class="spotlight">
-                <div class="image"><img class="shorter" src="images/Linda.jpg" alt="Dr. Linda Young, DNP" /></div>
+                <div class="image"><img class="shorter" src="images/LindaYoungDNPcopy.jpg" alt="Dr. Linda Young, DNP" />
+                </div>
                 <div class="content">
                     <h3 class="major">Dr. Linda Young, DNP</h3>
                     <p>
